--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </head>
 
-  <body>
+  <body data-bs-theme="dark">
     <header id="top" class="container-fluid">
       <div id="my-navbar" class="navbar navbar-inverse navbar-static-top">
         <div class="navbar-header">
